--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parse": "^0.4.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
     "socket.io": "^4.7.2"
