--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cookie-parse": "^0.4.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
