--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-   
-    "connect-mongo": "^5.1.0",
     "cookie-parse": "^0.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
+    "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
-    
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
   }
 }
