--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "command": "^0.0.5",
     "cookie-parse": "^0.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
