--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
-MONGO_URL = mongodb+srv://Marilyn:bKFBJlXjAWVtcyb7@maricluster.3nfwgsn.mongodb.net/ecommerceDB?retryWrites=true&w=majority
-PORT = 8080
-PRIVATE_KEY = coderSecretToken;
+MONGO_URL=mongodb+srv://Marilyn:bKFBJlXjAWVtcyb7@maricluster.3nfwgsn.mongodb.net/ecommerceDB?retryWrites=true&w=majority
+PORT=8080
+PRIVATE_KEY=coderSecretToken
+SECRECT_TOKEN=secretCoderDev
