--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "command": "^0.0.5",
+    "commander": "^11.1.0",
     "cookie-parse": "^0.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
