generador de tickets

--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ MONGO_URL=mongodb+srv://Marilyn:bKFBJlXjAWVtcyb7@maricluster.3nfwgsn.mongodb.net
 PORT=8080
 PRIVATE_KEY=coderSecretToken
 SECRECT_TOKEN=secretCoderDev
+PERSISTENCE= mongo
