--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,8 @@ MONGO_URL=mongodb+srv://Marilyn:bKFBJlXjAWVtcyb7@maricluster.3nfwgsn.mongodb.net
 PORT=8080
 PRIVATE_KEY=coderSecretToken
 SECRECT_TOKEN=secretCoderDev
-PERSISTENCE= mongo
-NODE_EMVIRONMENT = nodeCoder
+PERSISTENCE=mongo
+NODE_EMVIRONMENT=nodeCoder
+ADMIN_EMAIL="marilyncelisgutierrez@gmail.com"
+ADMIN_PASS=vougnnkoxfieysss
+TOKEN_EMAIL="mytokenemail
