--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon src/app.js --mode development --port 8080",
+    "start": "nodemon src/app.js --mode development --port 8080",
     "start-test": "mocha test/supertest.test.js --mode test --port 8081"
   },
   "keywords": [],
